# finance-analyses

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.ipynb  main.py  pyproject.toml  requirements.txt
ansible/: deploy.yaml
bot/: __init__.py  app.py  config.py  datatypes.py  db.py  exceptions.py  google.py  helpers.py  simple_bot.py  tg.py
bot/commands/: __init__.py  categories.py  emails.py  gs_commands.py  initial.py  storage_commands.py
bot/storage/: db.py  google.py  storage_base.py
docs/source/: conf.py  index.rst
