[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["x00Pavel <pavel.yadlouski@veeam.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "bot.app:main()"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
SQLAlchemy = "^2.0.0"
gspread = "^5.7.2"
pytelegrambotapi = "^4.9.0"
pymongo = "^4.3.3"
mongoengine = "^0.26.0"
email-validator = "^1.3.1"


[tool.poetry.group.dev.dependencies]
watchdog = "^2.2.1"
psutil = "^5.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
