[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["x00Pavel <pavel.yadlouski@veeam.com>"]

[tool.poetry.scripts]
start = "bot.app:main"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
SQLAlchemy = "^2.0.0"
gspread = "^5.7.2"
pytelegrambotapi = "^4.9.0"
pymongo = "^4.3.3"
mongoengine = "^0.26.0"
email-validator = "^1.3.1"
pydantic = "^1.10.4"
aiohttp = "^3.8.3"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
watchdog = "^2.2.1"
psutil = "^5.9.4"
poetry-dotenv-plugin = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
