[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["x00Pavel <pavel.yadlouski@veeam.com>"]

[tool.poetry.scripts]
start = "bot.app:main"

[tool.poetry.dependencies]
python = "^3.9"
gspread = "^5.7.2"
pytelegrambotapi = "^4.9.0"
pymongo = "^4.3.3"
mongoengine = "^0.26.0"
email-validator = "^1.3.1"
pydantic = "^1.10.4"
aiohttp = "^3.8.3"
flask = "^2.2.2"
gunicorn = "^20.1.0"
sphinx-rtd-theme = "^1.2.0"
sqlalchemy = "^2.0.22"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
watchdog = "^2.2.1"
psutil = "^5.9.4"
poetry-dotenv-plugin = "^0.1.0"
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
